<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ctl_vietnamese"
        >

        <TextView
            android:id="@+id/tv_area_vietnam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/area_vietnam"
            android:textStyle="bold"
            android:textColor="@color/colorTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/text_size_extra"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_border_main_content"
            app:layout_constraintTop_toBottomOf="@id/tv_area_vietnam"
            >

            <TextView
                android:id="@+id/tvSoCaNhiem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/text_sick"
                android:textColor="@color/textColor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_larger" />

            <TextView
                android:id="@+id/tvTuVong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/text_death"
                android:textColor="#F44336"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_larger"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tvRecovery"
                app:layout_constraintLeft_toLeftOf="@id/tvRecovery"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/tvRecovery"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/text_recovery"
                android:textColor="@color/colorTextRecovery"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tvSoCaNhiem"
                app:layout_constraintLeft_toLeftOf="@id/tvSoCaNhiem"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="@dimen/text_size_larger"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/ctl_global_layout"
        >

        <TextView
            android:id="@+id/tv_area_global"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/area_global"
            android:textStyle="bold"
            android:textColor="@color/colorTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/img_show"
            android:textSize="@dimen/text_size_extra"
            />
        <ImageView
            android:id="@+id/img_show"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_arrow_drop_down"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_area_global"
            app:layout_constraintBottom_toBottomOf="@id/tv_area_global"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/ctl_global"
        android:background="@drawable/bg_border_main_content"
        app:layout_constraintTop_toBottomOf="@id/tv_area_global"
        >
        <TextView
            android:id="@+id/tvSoCaNhiemGlobal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/text_sick"
            android:textColor="@color/textColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_larger" />

        <TextView
            android:id="@+id/tvTuVongGlobal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/text_death"
            android:textColor="#F44336"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_larger"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvRecoveryGlobal"
            app:layout_constraintLeft_toLeftOf="@id/tvRecoveryGlobal"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/tvRecoveryGlobal"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/text_recovery"
            android:textColor="@color/colorTextRecovery"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvSoCaNhiemGlobal"
            app:layout_constraintLeft_toLeftOf="@id/tvSoCaNhiemGlobal"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/text_size_larger"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_exit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#ffffff"
        android:visibility="gone"
        android:text="@string/text_btn_exit"
        >

    </Button>

</LinearLayout>